force-app/main/default/objects/ccrz__E_Configuration__c/ccrz__E_Configuration__c.object-meta.xml
<CustomObject>
    <label>CC Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>