force-app/main/default/objects/ccrz__E_Configuration__c/fields/ccrz__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ConfigurationId__c</fullName>
    <description>External Id that can be used for data loading purposes.  Not used by B2B Commerce.</description>
    <externalId>true</externalId>
    <label>Configuration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>