force-app/main/default/objects/ccrz__E_Configuration__c/fields/ccrz__ConfigurationMeta__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ConfigurationMeta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Configuration Metadata object that is used to define how this Configuration is used.</description>
    <label>CC Configuration Metadata</label>
    <referenceTo>ccrz__E_ConfigurationMeta__c</referenceTo>
    <relationshipLabel>CC Configurations</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>