force-app/main/default/objects/ccrz__E_Configuration__c/fields/ccrz__PageName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageName__c</fullName>
    <defaultValue>&apos;all&apos;</defaultValue>
    <description>Page name for this configuration.  This follows the page label model for page specific configurations and includes the use of the CC Subscriber Page pageKey as a valid value.
All is considered all pages.</description>
    <externalId>true</externalId>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>