force-app/main/default/objects/ccrz__E_Configuration__c/fields/ccrz__SequencePriority__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SequencePriority__c</fullName>
    <description>Field that is used to determine the priority for configurations for a given combination of storefront and page.  Used internally by B2B Commerce.  Should not be modified.</description>
    <externalId>true</externalId>
    <label>Sequence Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>