force-app/main/default/objects/ccrz__E_Configuration__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <defaultValue>&apos;global&apos;</defaultValue>
    <description>The storefront for which this Configuration applies.  Should either be a specific storefront or the value &apos;Global&apos;.</description>
    <externalId>true</externalId>
    <label>Storefront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>