force-app/main/default/objects/ccrz__E_Configuration__c/fields/ccrz__TextValue__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TextValue__c</fullName>
    <description>Data value for the configuration.</description>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>